--- a/IT_shop/users/templates/users/password_reset_email.html
+++ b/IT_shop/users/templates/users/password_reset_email.html
@@ -7,10 +7,10 @@
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url 'users:password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
-{% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
+{% translate 'Если  вы долбоеб и забыли свой username, то ЗАПИШИ СУКА НОВЫЙ ПАРОЛЬ И ЭТО:' %} {{ user.get_username }}
 
 {% translate "Thanks for using our site!" %}
 
-{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+{% blocktranslate %}The Mr.Rac  team{% endblocktranslate %}
 
 {% endautoescape %}
