--- a/IT_shop/shop/templates/shop/home.html
+++ b/IT_shop/shop/templates/shop/home.html
@@ -1,75 +1,95 @@
-{% extends 'shop/base.html'%}
+{% extends 'shop/base.html' %}
 {% load static %}
-{%block content%}
+{% block content %}
 HI!!!
 <form method="get">
-<input type="text" name="name">
-<input type="number" name="price_min" id="min_price">
-<input type="number" name="price_max" id="max_price">
-<input list="cat" name="category">
-<datalist id="cat">
- {%for cat in cats%}   
- <option value="{{cat.name}}">
-    {%endfor%}
-</datalist>
-<button type="submit">Sub</button></form>
-<p align="right"><a href="{%url 'cart_detail'%}">Cart</a></p>
-<center>
-<div class= 'products'>
-    {% for product in products %}
-    {% with product_id=product.id %}
-        <div class="product">
-            <h2>{{ product.name }}</h2>
-            
-            {{product.price}}
-            
-
-                
-                    <div>
-                        <img src="{{ product.images.first.photo.url }}" alt="{{ image.caption }}" width="420px" height="330px">
-
-                    </div>
-
-
-
-
-                                    <form method="post" action="{% url 'like' product.pk %}">
-                    {% csrf_token %}
-
-                    {%if like_dislike_icons[product_id].like_icon == True%}
-                <button>{{product.likes_count}}  <img src="{% static 'shop/Icons/like.svg' %}" alt="Like Icon" width="50px" height="50px"></button>
-                {%else%}
-                <button>{{product.likes_count}}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
-  <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a10 10 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733q.086.18.138.363c.077.27.113.567.113.856s-.036.586-.113.856c-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.2 3.2 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.8 4.8 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
-</svg></button>
-
-
-{%endif%}
-                </form>
-
-
-
-
-                <form method="post" action="{% url 'dislike' product.pk %}">
-                dislikes:{{product.dislikes_count}}
-
-                    {% csrf_token%}
-                <button>Dislike</button></p>
+    <input type="text" name="name">
+    <input type="number" name="price_min" id="min_price">
+    <input type="number" name="price_max" id="max_price">
+    <input list="cat" name="category">
+    <datalist id="cat">
+        {% for cat in cats %}
+            <option value="{{ cat.name }}"></option>
+        {% endfor %}
+    </datalist>
+    <button type="submit">Sub</button>
 </form>
+<p align="right"><a href="{% url 'cart_detail' %}">Cart</a></p>
+<center>
+    <div class='products'>
+        {% for product in products %}
+            <div class="product">
+                <h2>{{ product.name }}</h2>
+                <p>{{ product.price }}</p>
+                <div>
+                    <img src="{{ product.images.first.photo.url }}" alt="{{ product.images.first.caption }}" width="420px" height="330px">
+                </div>
+                <button class="like-btn {% if is_liked %}liked{% else %}not-liked{% endif %}" data-product-id="{{ product.id }}">
+                    {%if is_liked==True%}
 
-                            <h4><a href = '{%url "ShowProduct" product.slug%}'>Show full...</a></h4>
-                <a href="{%url 'add_to_cart' product.id%}">ADD </a>
+                                        👍 Like (<span class="like-count">{{ product.likes }}</span>)
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
+  <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a10 10 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733q.086.18.138.363c.077.27.113.567.113.856s-.036.586-.113.856c-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.2 3.2 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.8 4.8 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
+</svg>
+{%else%}
+
+                </button>
+                <button class="dislike-btn {% if is_disliked %}disliked{% else %}not-disliked{% endif %}" data-product-id="{{ product.id }}">
+                    👎 Dislike (<span class="dislike-count">{{ product.dislikes }}</span>)
+                </button>
+            </div>
+        {% endfor %}
+    </div>
+</center>
+<script type="text/javascript" src="{% static 'shop/js/jquery-3.7.1.min.js' %}"></script>
+<script>
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    var csrftoken = getCookie('csrftoken');
+
+    $(document).ready(function() {
+        $('.like-btn, .dislike-btn').click(function() {
+            var button = $(this);
+            var productId = button.data('product-id');
+            var isLikeButton = button.hasClass('like-btn');
+            var actionUrl = isLikeButton ? `/like/${productId}/` : `/dislike/${productId}/`;
             
-            {% if product.seller == profile%}
-            <a href = '{%url "product_edit" product.id%}'>Edit</a>&ensp; |
-
-            &ensp;<a href = '{%url "product_delete" product.id%}'>Delete</a>
-
-            {%endif%}
-
-        </div>
-    {% endfor %},
-</div></center>
-{%endblock%}
-
-
+            $.ajax({
+                url: actionUrl,
+                type: 'POST',
+                headers: {
+                    'X-CSRFToken': csrftoken
+                },
+                success: function(data) {
+                    if (isLikeButton) {
+                        button.toggleClass('liked not-liked');
+                        $('.like-count').text(data.likes);
+                        $('.dislike-count').text(data.dislikes);
+                    } else {
+                        button.toggleClass('disliked not-disliked');
+                        $('.dislike-count').text(data.dislikes);
+                        $('.like-count').text(data.likes);
+                    }
+                },
+                error: function(xhr) {
+                    console.error('Error:', xhr.status, xhr.statusText);
+                    console.error('Response:', xhr.responseText);
+                }
+            });
+        });
+    });
+</script>
+{% endblock %}
