--- a/IT_shop/users/templates/users/login.html
+++ b/IT_shop/users/templates/users/login.html
@@ -18,5 +18,11 @@
 	</div></nav>Забули юзернейм чи пароль?<b>
 	<p><a href="{%url 'users:password_reset'%}">&emsp;Відновити пароль</a></p></b>
 	<p><a href="{%url 'users:sign_up'%}">Новий користувач? <p>&emsp;<b>Реєстрація...</p></a></p></b>
-</form></div>
+</form></div><div class='add_product'>
+<b>Розробник? Ви можете підключити наш API! 
+Детальніше:
+<br>
+<a href="{%url 'api:api_info'%}">API documentation</a>
+</b></div>
 {%endblock%}
+
