--- a/IT_shop/shop/templates/shop/base.html
+++ b/IT_shop/shop/templates/shop/base.html
@@ -5,7 +5,7 @@
 <head>
 
 
-	<link rel="stylesheet" type="text/css" href="{% static 'shop/css/main.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'shop/CSS/main.css' %}">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SUPER</title>
